@startuml class_diagram
skinparam classAttributeIconSize 0
skinparam groupInheritance 1

abstract GeometricShape {}
class Point {}
class LineSegment {}
class Circle {}
class Rectangle {}
class Triangle {}

interface IRepository {}

class InMemoryRepository {}

class CreateShape {}
class MoveShape {}
class CalculateMetrics {}

class ShapeFactory {}

class GeometricShapeController {}

class GeometricShapeView {}

class GeometricShapeApp {}

' Inheritance (Herança)
GeometricShape <|-- Point
GeometricShape <|-- LineSegment
GeometricShape <|-- Circle
GeometricShape <|-- Rectangle
GeometricShape <|-- Triangle

' Implement (Implementação)
IRepository <|.. InMemoryRepository

' Composition (Composição)
Point --* LineSegment : "1..2"
Point --* Circle : "1..1"
Point --* Rectangle : "1..4"
Point --* Triangle : "1..3"
GeometricShapeController *-- CreateShape : "1..1"
GeometricShapeController *-- MoveShape : "1..1"
GeometricShapeController *-- CalculateMetrics : "1..1"
GeometricShapeApp --* GeometricShapeView : "1..1"
GeometricShapeApp --* GeometricShapeController : "1..1"

' Aggregation (Agregação)
ShapeFactory o-- CreateShape : "1..1"
InMemoryRepository o-- CreateShape : "1..1"
InMemoryRepository o-- MoveShape : "1..1"
InMemoryRepository o-- CalculateMetrics : "1..1"

' Association (Associação)
Point --> ShapeFactory : "0..*"
LineSegment --> ShapeFactory : "0..*"
Circle --> ShapeFactory : "0..*"
Rectangle --> ShapeFactory : "0..*"
Triangle --> ShapeFactory : "0..*"

@enduml
